add favicon; break apart templates better

--- a/tmpl/home.html
+++ b/tmpl/home.html
@@ -1,15 +1,4 @@
-<!doctype html>
-<html lang="en">
-    <head lang='en'>
-        <title>{{.Title}}</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name='description' content='A web-based text editor written in Go'>
-        <meta name='author' content='Mason Adam'>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
-    </head>
-
+{{template "header.html"}}
     <body>
         <div class="row top-lg">
             <div class="col-lg-12">
@@ -24,4 +13,4 @@
         </div>  
         
     </body>
-</html>
+{{template "footer.html"}}
