initial styling of home page; added templates; linked to bootstrap

--- a/tmpl/editor.html
+++ b/tmpl/editor.html
@@ -5,5 +5,5 @@
                 <div class="box">Welcome to the editor</div>
             </div>
         </div>           
-    </body>
+<!-- end body tag in tmpl/footer.html-->
 {{template "footer.html"}}
