--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -1,12 +1,26 @@
 <!doctype html>
 <html lang="en">
-    <head lang='en'>
+    <head>
         <title>{{.Title}}</title>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <!-- Bootstrap metas -->
+    	<meta charset="utf-8">
+	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    <!-- Bootstrap CSS -->
+    	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+        
+<!--         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+ -->
         <meta name='description' content='A web-based text editor written in Go'>
         <meta name='author' content='Mason Adam'>
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
 	    <link rel='shortcut icon' href="/favicon.ico?" type="image/x-icon" />
+	    <style>
+			body {
+			  padding-top: 5rem;
+			}
+			.starter-template {
+			  padding: 3rem 1.5rem;
+			  text-align: center;
+			}
+		</style>
     </head>
