--- a/tmpl/home.html
+++ b/tmpl/home.html
@@ -1,16 +1,52 @@
 {{template "header.html"}}
     <body>
-        <div class="row top-lg">
-            <div class="col-lg-12">
-                <div class="box">GopherCode</div>
+        <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+            <a class="navbar-brand" href="/home">GopherCode</a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <ul class="navbar-nav mr-auto">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/editor">Editor<span class="sr-only">(current)</span></a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="https://github.com/masontadam/GopherCode.git">Source</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/contactme">Contact Me</a>
+                    </li>
+                </ul>
+<!--
+                <form class="form-inline mt-2 mt-md-0">
+                    <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+                    <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                </form>
+-->
             </div>
-        </div>   
-        
-        <div class="row">
-            <div class="col-lg-12">
-                <a href="/editor">Get Started</a>
+        </nav>
+
+    <main role="main" class="container">
+
+      <div class="starter-template">
+        <h1>Welcome to GopherCode</h1>
+<!--         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p> -->
+        <a class="btn btn-outline-primary" href="/editor" role="button">Get Started</a>
+        <a class="btn btn-outline-secondary" href="/info" role="button">Learn More</a>
+      </div>
+
+    </main><!-- /.container -->
+
+<!--
+     <main role="main" class="container">
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-md">
+                    <a class="btn btn-outline-primary" href="/editor" role="button">Get Started</a>
+                    <a class="btn btn-outline-secondary" href="/info" role="button">Learn More</a>
+                </div>
             </div>
-        </div>  
-        
-    </body>
+        </div>
+ -->
+<!-- end body tag in tmpl/footer.html-->
 {{template "footer.html"}}
