added file server for /public files; ported custom css to /public/css folder

--- a/tmpl/header.html
+++ b/tmpl/header.html
@@ -2,25 +2,17 @@
 <html lang="en">
     <head>
         <title>{{.Title}}</title>
+        <meta name='description' content='A web-based text editor written in Go'>
+        <meta name='author' content='Mason Adam'>
+
 	    <!-- Bootstrap metas -->
     	<meta charset="utf-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+	    
 	    <!-- Bootstrap CSS -->
     	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        
-<!--         <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
- -->
-        <meta name='description' content='A web-based text editor written in Go'>
-        <meta name='author' content='Mason Adam'>
-	    <link rel='shortcut icon' href="/favicon.ico?" type="image/x-icon" />
-	    <style>
-			body {
-			  padding-top: 5rem;
-			}
-			.starter-template {
-			  padding: 3rem 1.5rem;
-			  text-align: center;
-			}
-		</style>
+
+    	<!-- Custom Styleing -->
+	    <link rel='shortcut icon' href="../public/img/favicon.ico?" type="image/x-icon" />
+	    <link rel="stylesheet" href="../public/css/home.css" type="text/css">
     </head>
