--- a/tmpl/editor.html
+++ b/tmpl/editor.html
@@ -1,9 +1,11 @@
 {{template "header.html"}}
     <body>
+        {{template "navbar.html"}}        
         <div class="row top-lg">
             <div class="col-lg-12">
                 <div class="box">Welcome to the editor</div>
             </div>
-        </div>           
+        </div>       
+    
 <!-- end body tag in tmpl/footer.html-->
 {{template "footer.html"}}
